[gd_scene load_steps=3 format=3 uid="uid://cywwviq8ngo1c"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_ktev3"]

[sub_resource type="LabelSettings" id="LabelSettings_f8wav"]
font_size = 30

[node name="MenuButton" type="Button"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -47.0
offset_right = -11.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Menu"
script = ExtResource("1_ktev3")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -647.5
offset_top = -416.5
offset_right = -373.5
offset_bottom = -374.5
grow_horizontal = 2
grow_vertical = 2
text = "Thanks for playing!"
label_settings = SubResource("LabelSettings_f8wav")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = -588.0
offset_top = -381.0
offset_right = -388.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ReplayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Replay"

[node name="LeaveButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Leave"

[connection signal="button_down" from="." to="." method="_on_menu_button_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_v_box_container_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_v_box_container_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/ReplayButton" to="." method="_on_replay_button_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/ReplayButton" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ReplayButton" to="." method="_on_v_box_container_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/LeaveButton" to="." method="_on_leave_button_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/LeaveButton" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/LeaveButton" to="." method="_on_v_box_container_mouse_exited"]
